--- a/index.html
+++ b/index.html
@@ -1,15 +1,10 @@
+<!DOCTYPE html>
 <html lang="pt-br"></html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redes Sociais</title>
+    <title>Graficos</title>
 </head>
-<body>
-<!-- Código omitido… -->
- 
-</body>
-</html>
-
 <body>
     <header>
         <h1>Relatório das redes sociais</h1>
@@ -27,3 +22,4 @@
         <p>Desenvolvido por Arielle Kevillyn</p>
     </footer>
 </body>
+</html>
